--- a/Web.config
+++ b/Web.config
@@ -11,7 +11,7 @@
   <system.serviceModel>
     <services>
       <service name="Bal.Service1">
-        <endpoint address="http://ec2-52-67-133-79.sa-east-1.compute.amazonaws.com/BOBal/" binding="webHttpBinding" behaviorConfiguration="WebHttpBehavior" contract="Bal.BOBal" />
+        <endpoint address="http://ec2-52-67-133-79.sa-east-1.compute.amazonaws.com/BOBal/Service1/" binding="webHttpBinding" behaviorConfiguration="WebHttpBehavior" contract="Bal.BOBal" />
       </service>
     </services>
     <behaviors>
